# copypatrol-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml  update-version.yaml
.toolforge/: jobs.yaml
.vps/: .copypatrol.ini  README.md  copypatrol-env.example.sh
.vps/nginx/: copypatrol-api
.vps/systemd/: copypatrol-api-gunicorn.service  copypatrol-api-gunicorn.socket  copypatrol-backend-check-changes.service  copypatrol-backend-counts.service  copypatrol-backend-counts.timer  copypatrol-backend-reports.service  copypatrol-backend-reports.timer  copypatrol-backend-store-changes.service  copypatrol-backend-update-ready-diffs.service  copypatrol-backend-update-ready-diffs.timer
src/copypatrol_backend/: api.py  check_diff.py  cli.py  config.py  database.py  stream_listener.py  tca.py  wiki.py
testing/: resources.py  setup
testing/fixtures/: Basil_Lee_Whitener-1173291523-cleaned.txt  Basil_Lee_Whitener-1173291523.txt  Kommet,_ihr_Hirten-1125722395.txt  Kommet,_ihr_Hirten-1126962296-added.txt  Kommet,_ihr_Hirten-1126962296-cleaned.txt  Kommet,_ihr_Hirten-1126962296.txt
testing/unit/: config.ini  create-submission.yaml  eula.yaml  generate-report.yaml  load-revisions-nooauth.yaml  load-revisions-oauth.yaml  report-info.yaml  report-sources.yaml  submission-info-complete.yaml  submission-info-error.yaml  upload-submission-conflict.yaml  upload-submission-eula.yaml  upload-submission-fail.yaml  upload-submission-success.yaml
tests/integration/: conftest.py  database_test.py
tests/unit/: check_diff_test.py  cli_test.py  config_test.py  conftest.py  database_test.py  stream_listener_test.py  tca_test.py  wiki_test.py
