[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    { name = "JJMC89" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "cachetools (==5.5.2)",
    "flask (==3.1.1)",
    "gunicorn (==23.0.0)",
    "mwparserfromhell (==0.6.6)",
    "pywikibot [eventstreams, mwoauth] (==10.0.0)",
    "pywikibot-extensions (==24.9.21)",
    "requests (==2.32.3)",
    "sqlalchemy [pymysql] (==2.0.40)",
    "urllib3 (==2.4.0)",
]
description = "CopyPatrol backend bot"
keywords = [ "copyright", "wikipedia" ]
license = { text = "MIT" }
name = "copypatrol-backend"
readme = "README.md"
requires-python = ">=3.11"
version = "2025.4.8"

[project.scripts]
copypatrol-backend = "copypatrol_backend.cli:cli"

[project.urls]
documentation = "https://meta.wikimedia.org/wiki/Special:MyLanguage/CopyPatrol"
issues = "https://phabricator.wikimedia.org/project/view/1638/"
source = "https://github.com/JJMC89/copypatrol-backend"


[tool.black]
target-version = ["py311"]
line-length = 79  # default: 88


[tool.coverage]

[tool.coverage.report]
fail_under = 80

[tool.coverage.run]
plugins = [
    "covdefaults",
]


[tool.isort]
add_imports = ["from __future__ import annotations"]
atomic = true
lines_after_imports = 2
profile = "black"
py_version = 311


[tool.mypy]
python_version = 3.11
enable_error_code = [
    "ignore-without-code",
]
strict = true

[[tool.mypy.overrides]]
module = [
    "pywikibot.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_calls = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "tests.unit.config_test",
]
disable_error_code = [
    "attr-defined",  # types-cachetools missing __wrapped__
]


[tool.poetry]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
covdefaults = "2.3.0"
pytest = "8.3.5"
pytest-cov = "6.1.1"
pytest-env = "1.1.5"
pytest-mock = "3.14.0"
pytest-randomly = "3.16.0"
pytest-socket = "0.7.0"
responses = "0.25.7"


[tool.pytest]

[tool.pytest.ini_options]
addopts = "--cov --no-cov-on-fail"
verbosity_assertions = 2

[tool.pytest_env]
CPB_ENV = {value = "pytest", skip_if_set = false}
CPB_DB_DRIVERNAME = {value = "sqlite", skip_if_set = true}
