[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    { name = "JJMC89" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "cachetools == 6.1.0",
    "flask == 3.1.1",
    "gunicorn == 23.0.0",
    "mwparserfromhell == 0.7.2",
    "pywikibot [eventstreams, mwoauth] == 10.3.2",
    "pywikibot-extensions == 24.9.21",
    "requests == 2.32.4",
    "sqlalchemy [pymysql] == 2.0.43",
    "urllib3 == 2.5.0",
]
description = "CopyPatrol backend bot"
keywords = [ "copyright", "wikipedia" ]
license = { text = "MIT" }
name = "copypatrol-backend"
readme = "README.md"
requires-python = ">=3.13"
version = "2025.8.4"

[project.scripts]
copypatrol-backend = "copypatrol_backend.cli:cli"

[project.urls]
documentation = "https://meta.wikimedia.org/wiki/Special:MyLanguage/CopyPatrol"
issues = "https://phabricator.wikimedia.org/project/view/1638/"
source = "https://github.com/JJMC89/copypatrol-backend"


[tool.black]
target-version = ["py313"]
line-length = 79  # default: 88


[tool.coverage]

[tool.coverage.report]
fail_under = 80

[tool.coverage.run]
plugins = [
    "covdefaults",
]


[tool.isort]
add_imports = ["from __future__ import annotations"]
atomic = true
lines_after_imports = 2
profile = "black"
py_version = 313


[tool.mypy]
python_version = 3.13
enable_error_code = [
    "ignore-without-code",
]
strict = true

[[tool.mypy.overrides]]
module = [
    "pywikibot.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_calls = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "tests.unit.config_test",
]
disable_error_code = [
    "attr-defined",  # types-cachetools missing __wrapped__
]


[tool.poetry]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.test.dependencies]
covdefaults = "2.3.0"
pytest = "8.4.1"
pytest-cov = "6.2.1"
pytest-env = "1.1.5"
pytest-mock = "3.14.1"
pytest-randomly = "3.16.0"
pytest-socket = "0.7.0"
responses = "0.25.7"


[tool.pytest]

[tool.pytest.ini_options]
addopts = "--cov --no-cov-on-fail"
verbosity_assertions = 2

[tool.pytest_env]
CPB_ENV = {value = "pytest", skip_if_set = false}
CPB_DB_DRIVERNAME = {value = "sqlite", skip_if_set = true}
